erDiagram
    USERS {
        ObjectId _id PK
        string email UK
        string walletAddress IDX
        string name
        string riskTolerance
        string tradeStyle
        array balances
        date createdAt
        date updatedAt
    }

    TOKENS {
        ObjectId _id PK
        string address UK
        string canonicalKey UK
        string coingeckoId UK
        string chain IDX
        string symbol IDX
        string name
        string type IDX
        number priceUsd
        date priceUpdatedAt
    }

    TOKEN_PRICE_HISTORY {
        ObjectId _id PK
        ObjectId token FK
        string tokenAddress IDX
        string priceUsd
        date timestamp IDX
        string source
    }

    SIGNALS {
        ObjectId _id PK
        string signalKey UK
        string tokenSymbol IDX
        string tokenAddress IDX
        string batchId IDX
        date detectedAt IDX
        array sources
        string sentimentType
        string suggestionType IDX
        number directionScore
        number quantScore
        number confidence
        string signalMode IDX
        string status
        date expiresAt IDX
    }

    PROPOSALS {
        ObjectId _id PK
        ObjectId signalId FK
        ObjectId userId FK
        ObjectId triggerSignalId FK
        ObjectId overriddenByProposalId FK
        string tokenSymbol UK_ACTIVE
        string tokenAddress UK_ACTIVE
        string suggestionType
        number quantScore
        number confidence
        string lifecycleStatus IDX
        string executionStatus
        date expiresAt IDX
        string winLossStatus IDX
        date backtestedAt IDX
    }

    BACKTEST_RESULTS {
        ObjectId _id PK
        ObjectId proposalId FK_UK
        ObjectId signalId FK
        string tokenSymbol IDX
        string tokenAddress IDX
        date detectedAt IDX
        date expiresAt IDX
        number entryPrice
        number exitPrice
        number pnlPercentage
        number actualPnL
        string winLossStatus IDX
        number feeRate
        number slippageRate
        number notionalUsd
        string dataQuality IDX
    }

    WATCHLIST_ITEMS {
        ObjectId _id PK
        ObjectId proposalId FK
        ObjectId userId FK
        string walletAddress IDX
        string addedBy
        string status IDX
        date addedAt
        date resolvedAt
    }

    TRADE_EXECUTIONS {
        ObjectId _id PK
        ObjectId proposalId FK
        ObjectId userId FK
        string walletAddress
        string tokenSymbol
        string tokenAddress
        string direction
        string status
        string orderId
        string txHash
        number requestedPrice
        number executedPrice
        number slippagePct
        number sizeUsd
        number notionalUsd
        number leverage
        date requestedAt
        date executedAt
    }

    PERP_POSITIONS {
        ObjectId _id PK
        ObjectId userId FK
        ObjectId proposalId FK
        ObjectId executionId FK
        ObjectId token FK
        string tokenSymbol
        string tokenAddress IDX
        string positionDirection
        number leverage
        number entryPrice
        number executedPrice
        number positionSize
        number liquidationPrice IDX
        string status IDX
        date createdAt
        date updatedAt
    }

    PROPOSAL_DECISIONS {
        ObjectId _id PK
        ObjectId proposalId FK
        ObjectId signalId FK
        ObjectId userId FK
        ObjectId executionId FK
        string walletAddress
        string decision
        string reason
        array blockersAtDecision
        object snapshot
        date createdAt
    }

    USERS ||--o{ PROPOSALS : "userId"
    USERS ||--o{ WATCHLIST_ITEMS : "userId"
    USERS ||--o{ TRADE_EXECUTIONS : "userId"
    USERS ||--o{ PERP_POSITIONS : "userId"
    USERS ||--o{ PROPOSAL_DECISIONS : "userId"

    TOKENS ||--o{ TOKEN_PRICE_HISTORY : "token"
    TOKENS ||--o{ PERP_POSITIONS : "token"

    SIGNALS ||--o{ PROPOSALS : "signalId"
    SIGNALS ||--o{ BACKTEST_RESULTS : "signalId"
    SIGNALS ||--o{ PROPOSAL_DECISIONS : "signalId"

    PROPOSALS ||--o| BACKTEST_RESULTS : "proposalId"
    PROPOSALS ||--o{ WATCHLIST_ITEMS : "proposalId"
    PROPOSALS ||--o{ TRADE_EXECUTIONS : "proposalId"
    PROPOSALS ||--o{ PERP_POSITIONS : "proposalId"
    PROPOSALS ||--o{ PROPOSAL_DECISIONS : "proposalId"
    PROPOSALS o|--o{ PROPOSALS : "overriddenByProposalId"

    TRADE_EXECUTIONS ||--o{ PERP_POSITIONS : "executionId"
    TRADE_EXECUTIONS o|--o{ PROPOSAL_DECISIONS : "executionId"
